[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.4.0"
anyhow = "1.0.75"
argon2 = "0.5.2"
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
mongodb = { version = "2.7.0", features = ["bson-chrono-0_4"] }
serde = "1.0.188"
serde_json = "1.0.107"
serde_repr = "0.1.16"
thiserror = "1.0.49"
validator = { version = "0.16.1", features = ["derive"] }
dotenvy = "0.15.7"
actix-cors = "0.6.4"
actix-multipart = "0.6.1"
mime = "0.3.17"
actix-files = "0.6.2"
